--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const {
   title = "Vektor Aero",
-  description = "Vektor Aero: A plataforma indispensável para a sua cabine de comando. Cálculos de jornada, conformidade e muito mais.",
+  description = "Vektor Aero: A plataforma indispensavel para a sua cabine de comando. Calculos de jornada, conformidade e muito mais.",
 } = Astro.props as Props;
 ---
 
@@ -18,7 +18,7 @@ const {
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content={description} />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J827Z0SRQ2"></script>
