Define fundo escuro padrao

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const {
       gtag('config', 'G-J827Z0SRQ2');
     </script>
   </head>
-  <body>
+  <body class="bg-[#0B1726] text-gray-200 antialiased">
     <slot />
   </body>
 </html>
