--- a/src/pages/eula.astro
+++ b/src/pages/eula.astro
@@ -2,7 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="EULA - JourneyComply">
+<Layout 
+  title="EULA - Acordo de Licença do Usuário Final | JourneyComply - Vektor Aero"
+  description="Acordo de Licença do Usuário Final (EULA) do aplicativo JourneyComply. Termos de uso, subscriptions, pagamentos e políticas para iOS e Android."
+>
 	<main>
 		<div class="container">
 			<header class="page-header">
