--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,7 @@ import Header from '../components/Header.astro';
               <!-- Conversor de Unidades -->
               <div class="flex flex-col items-center">
                 <!-- Ícone PNG personalizado -->
-                <img src="/calcAzul.png" alt="Ícone Calculadora Azul" class="h-10 w-10 object-contain" />
+                <img src="/calcAzul.png" alt="Ícone Calculadora Azul" class="h-[50px] w-[50px] object-contain" />
                 <h4 class="mt-4 font-semibold text-gray-800">Conversor de Unidades</h4>
                 <p class="text-gray-600">Converta Hora→Decimal, Decimal→Hora e Unidades de Combustível.</p>
               </div>
@@ -179,7 +179,7 @@ import Header from '../components/Header.astro';
               <!-- Descanso a Bordo -->
               <div class="flex flex-col items-center">
                 <!-- Ícone PNG personalizado -->
-                <img src="/timeAzul.png" alt="Ícone Descanso a Bordo" class="h-10 w-10 object-contain" />
+                <img src="/timeAzul.png" alt="Ícone Descanso a Bordo" class="h-[50px] w-[50px] object-contain" />
                 <h4 class="mt-4 font-semibold text-gray-800">Descanso a Bordo</h4>
                 <p class="text-gray-600">Planeje o revezamento de descanso a bordo.</p>
               </div>
