--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ import Header from '../components/Header.astro';
               </div>
               
               <div class="flex flex-col items-center">
-                <svg class="h-10 w-10 text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" /></svg>
+                <img src="/timeLogo.png" alt="Ícone Time Zone" class="h-[50px] w-[50px] object-contain" />
                 <h4 class="mt-4 font-semibold text-gray-800">Time Zones (UTC)</h4>
                 <p class="text-gray-600">Busca rápida de fuso horário por ICAO ou cidade.</p>
               </div>
