--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,7 +145,7 @@ import Header from '../components/Header.astro';
             <div class="mt-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10">
               
               <div class="flex flex-col items-center">
-                <svg class="h-10 w-10 text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" /></svg>
+                <svg class="h-[50px] w-[50px] text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" /></svg>
                 <h4 class="mt-4 font-semibold text-gray-800">Horas Diurnas/Noturnas</h4>
                 <p class="text-gray-600">Horas diurnas e noturnas calculadas automaticamente.</p>
               </div>
@@ -157,13 +157,13 @@ import Header from '../components/Header.astro';
               </div>
 
               <div class="flex flex-col items-center">
-                <svg class="h-10 w-10 text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18 9 11.25l4.306 4.306a11.95 11.95 0 0 1 5.814-5.518l2.74-1.22m0 0-5.94-2.281m5.94 2.28-2.28 5.941" /></svg>
+                <svg class="h-[50px] w-[50px] text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18 9 11.25l4.306 4.306a11.95 11.95 0 0 1 5.814-5.518l2.74-1.22m0 0-5.94-2.281m5.94 2.28-2.28 5.941" /></svg>
                 <h4 class="mt-4 font-semibold text-gray-800">Simulador de Aclimatação</h4>
                 <p class="text-gray-600">Planeje seus períodos de descanso para estar sempre no seu melhor.</p>
               </div>
               <!-- Nascer e Por do Sol -->
               <div class="flex flex-col items-center">
-                <svg class="h-10 w-10 text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3 12a9 9 0 0 1 18 0M12 3v2m0 14v2m7.071-7.071l-1.414-1.414M6.343 6.343l-1.414 1.414M21 12h-2M5 12H3" /></svg>
+                <svg class="h-[50px] w-[50px] text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3 12a9 9 0 0 1 18 0M12 3v2m0 14v2m7.071-7.071l-1.414-1.414M6.343 6.343l-1.414 1.414M21 12h-2M5 12H3" /></svg>
                 <h4 class="mt-4 font-semibold text-gray-800">Nascer e Por do Sol</h4>
                 <p class="text-gray-600">Saiba os horários exatos de nascer e por do sol durante seu voo.</p>
               </div>
