--- a/src/pages/privacidade.astro
+++ b/src/pages/privacidade.astro
@@ -190,14 +190,14 @@ const pageTitle = "Política de Privacidade | Vektor Aero";
         Para questões sobre esta Política de Privacidade ou seus direitos de privacidade:
       </p>
       <p class="mt-2">
-        <strong>Email:</strong> <a class="text-green-400 hover:text-green-300" href="mailto:privacidade@vektoraero.com.br">privacidade@vektoraero.com.br</a><br/>
+        <strong>Email:</strong> <a class="text-green-400 hover:text-green-300" href="mailto:contato@vektoraero.com.br">contato@vektoraero.com.br</a><br/>
         <strong>Website:</strong> <a class="text-green-400 hover:text-green-300" href="https://www.vektoraero.com.br/privacidade" target="_blank" rel="noopener noreferrer">https://www.vektoraero.com.br/privacidade</a>
       </p>
       <p class="mt-4">
         <strong>Endereço:</strong><br/>
         Vektor Aero<br/>
-        Rua das Empresas, 123<br/>
-        Itu - SP, CEP 13300-000<br/>
+        Av. Raquel de Queiroz, 743<br/>
+        Itu - SP, CEP 13305-420<br/>
         Brasil
       </p>
     </section>
