--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,8 +33,8 @@ const canonicalURL = new URL(Astro.url.pathname.replace(/\/$/, '') || '/', Astro
     <meta property="og:url" content={canonicalURL} />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
-    <meta property="og:image" content="https://vektoraero.com.br/logo.png" />
-    <meta property="og:image:secure_url" content="https://vektoraero.com.br/logo.png" />
+    <meta property="og:image" content="https://vektoraero.com.br/og-image.png" />
+    <meta property="og:image:secure_url" content="https://vektoraero.com.br/og-image.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -47,7 +47,7 @@ const canonicalURL = new URL(Astro.url.pathname.replace(/\/$/, '') || '/', Astro
     <meta property="twitter:url" content={canonicalURL} />
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={description} />
-    <meta property="twitter:image" content="https://vektoraero.com.br/logo.png" />
+    <meta property="twitter:image" content="https://vektoraero.com.br/og-image.png" />
     <meta property="twitter:image:alt" content="Vektor Aero - Plataforma de Conformidade Aérea" />
     
     <!-- Canonical URL -->
